style.css
/*@font-face {*/
/*  font-family: 'Handjet';*/
/*  font-style: normal;*/
/*  font-display: swap;*/
/*  src: url("Handjet-VariableFont_ELGR,ELSH,wght.ttf");*/
/*}*/

@font-face {
  font-family: 'Barlow Condensed';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url("BarlowCondensed-Regular.ttf");
}
@font-face {
  font-family: 'Barlow Condensed';
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url("BarlowCondensed-Medium.ttf");
}
@font-face {
  font-family: 'Barlow Condensed';
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url("BarlowCondensed-SemiBold.ttf");
}
@font-face {
  font-family: 'Barlow Condensed';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url("BarlowCondensed-Bold.ttf");
}

:root {
	--bg-color: #0e0021;
	/*--bg-color-transparent: #0e002188;*/
	--bg-color-transparent: #0e002155;
	--bg-block-transparent: #0e002188;
	--fg-color: #888a85;
	--fg-color-brighter: #c0bbbb;
	--bg-color-main: #888a85AA;
	--fg-color-main: var(--bg-color);
	--accent-color: #5e5081;
	--accent-color-bright1: #dc5e86;
	--accent-color-bright2: #9edc60;
	--warning-fg-color: black;
	--warning-bg-color: rgba(255, 0, 125, 0.6);
	--warning-bg-color-gradient: linear-gradient(90deg, rgba(255, 0, 125, 0.6), rgba(255, 0, 125, 0.55), rgba(255, 0, 125, 0.3));
	--warning2-fg-color: var(--fg-color);
	--warning2-bg-color: rgba(255, 0, 125, 0.3);
	--warning2-bg-color-gradient: linear-gradient(90deg, rgba(255, 0, 125, 0.3), rgba(255, 0, 125, 0.33), rgba(255, 0, 125, 0.2));
	--border-color-block: #888a8533;

	--standard-padding: 6px;
	/*--block-width: 324px;*/
	--block-width: 290px;
	--block-margin: 10px;

	--fw-body: 400;
	--fw-text: 500;
	--fw-headline: 600;
	--fw-link: 600;
	--fw-link: 500;
	--fw-bold: 700;

	/*--font-family: 'Dosis';*/
	/*--fs-body: 20px;*/
	/*--fs-text: 20px;*/
	/*--fs-headline: 53px;*/
	/*--fs-headline: 40px;*/
	/*--fs-link: 24px;*/

	/*--font-family: 'Handjet';*/
	--fs-body: 26px;
	--fs-text: 26px;
	--fs-headline: 56px;
	--fs-link: 30px;

	--font-family: 'Barlow Condensed';
	--fs-body: 22px;
	--fs-text: 22px;
	--fs-headline: 50px;
	--fs-link: 24px;
}

/* layout */

#bg_container {
	/*background-color: #20001b;*/
	background-color: #210122;
	background-image: url("bg.jpg");
	background-size: cover;
	background-position-x: center;
	background-position-y: top;
	background-position-y: center;
	/*min-height: 100%;*/
	/*min-height: 100vh;*/
	height: auto;
	z-index: 10;
	width: 100%;
	left: 0;
	bottom: 0;
	top: 0;
	right: 0;
	position: absolute;
	overflow-y: scroll;
}
#content_container_wrapper {
	min-height: calc(100vh - 9em);
}
#content_container {
	position: relative;
	z-index: 20;
	background: var(--bg-color-transparent);
	/*margin-right: 8px;*/
	margin: 8px;
	padding-bottom: 1px;
}

#logo_container {
	/*position: absolute;*/
	right: 0;
	bottom: 0;
	z-index: 15;
	margin: 0;

	float: right;
	position: relative;
	margin-bottom: 1em;
}
.clear {
	clear: both;
}
#logo {
	/*width: 392px;*/
	/*width: 196px;*/
	width: 294px;
	/*opacity: 0.82;*/
	/*opacity: 0.62;*/
	/*opacity: 0.66;*/
	/*opacity: 0.52;*/
	opacity: 0.42;
	image-rendering: -moz-crisp-edges;
}


/* generic */

body {
	font-family: var(--font-family), sans;
	background: var(--bg-color);
	color: var(--fg-color);
	font-size: var(--fs-body);
	font-weight: var(--fw-body);
}

.main_title {
	margin: 0;
	padding-left: var(--block-margin);
	padding-right: var(--block-margin);
	padding-top: 4px;
	padding-bottom: var(--block-margin);
}
.main_title h1 {
	margin: 0;
	padding: 0;
	font-family: var(--font-family), sans;
	color: var(--fg-color-brighter);
	text-transform: uppercase;
	font-weight: var(--fw-headline);
	font-size: var(--fs-headline);
	line-height: 45px;
}

a {
	font-weight: var(--fw-link);
	color: var(--accent-color-bright2);
	white-space: nowrap;
}
a.break {
	white-space: collapse;
	overflow-wrap: break-word;
}

a:hover {
	color: var(--accent-color-bright1);
}

.emoji {
	display: inline-block;
	filter: hue-rotate(30deg);
	margin: 0;
	margin-top: 1px;
	vertical-align: bottom;
}

.nobr {
	white-space: nowrap;
}

::selection,
::-moz-selection {
	background: var(--accent-color-bright1);
	color: var(--bg-color);
}


/* specific areas */

#main_text {
	padding-top: 6px;
	padding-left: var(--standard-padding);
	padding-right: var(--standard-padding);
	padding-right: 8px;
	padding-bottom: 6px;
	font-size: var(--fs-text);
	font-weight: var(--fw-text);
	line-height: var(--fs-text);
	background: var(--bg-color-main);
	color: var(--fg-color-main);
	/*width: 390px;*/
	width: calc(var(--block-width) + 6px);
	margin-left: calc(var(--block-margin) + 2px);
}

#main_text p {
	display: inline;
	vertical-align: top;
}


#links {
	margin-top: 0;
	margin-bottom: 28px;
	font-size: var(--fs-link);
	/*list-style: none;*/
	font-family: var(--font-family), sans;
	padding: 0 var(--standard-padding);
	padding-top: 2px;
	color: var(--fg-color-brighter);
}

/*#links .block:first-child {*/
/*	margin-top: 8px;*/
/*}*/

#links .block {
	margin-top: 11px;
	margin-bottom: 0;
	text-transform: uppercase;
	/*max-width: 410px;*/
	width: var(--block-width);
	/*padding-right: 12px;*/
	padding-right: 20px;
	float: left;
	background: var(--bg-block-transparent);
	margin-left: 6px;
	margin-right: 5px;
	padding: var(--block-margin);
	border-style: solid;
	border-width: 1px;
	border-color: var(--border-color-block);

}

#links ul {
	text-transform: none;
	color: var(--fg-color);
	margin-top: var(--block-margin);
	margin-top: 0;
	margin-bottom: 14px;
	margin-bottom: 0;
	padding-left: 32px;
	/*line-height: 26px;*/
}
#links ul li {
	margin-bottom: 3px;
}
#links ul ul {
	padding-left: 0;
}
#links ul ul li {
	margin-left: 29px;
}

.new_release_subblock {
	background: var(--warning-bg-color);
	background: var(--warning-bg-color-gradient);
	color: var(--warning-bg-color);
	padding: 3px 6px;
	/*font-weight: bold;*/
	margin-top: 3px;
}
.new_release_subblock.level2 {
	background: var(--warning2-bg-color);
	background: var(--warning2-bg-color-gradient);
}
.new_release_subblock div.new_release {
	padding-top: 1px;
	padding-bottom: 1px;
	padding-left: 6px;
	margin-left: -3px;
	color: var(--warning-bg-color);
	background: #00000088;
	font-weight: var(--fw-headline);
}
.new_release_subblock div.new_release::before {
	content: "!!! NEW RELEASE !!!";
}
.new_release_subblock div,
.new_release_subblock span {
	color: var(--warning-fg-color);
}
.new_release_subblock.level2 div,
.new_release_subblock.level2 span {
	color: var(--warning2-fg-color);
}
.new_release_subblock a {
	background: rgba(0, 0, 0, 0.666);
	padding: 0px 4px 2px 4px;
}
.new_release_subblock a:hover {
	background: black;
}
.new_release_subblock div.project_name {
	font-weight: var(--fw-bold);
}
div.project_name::after {
	content: ":";
	font-weight: var(--fw-body);
}

.select-none {
    -webkit-user-select: none;
    user-select: none;
}
.invisible {
	color: #00000000 !important;
	position: absolute;
}
.upside_down {
	transform: rotate(180deg);
	display: inline-block;
	padding-bottom: 2.0px;
}

